# dagster-data-pipeline

./: .gitignore  README.md  docker-compose.yaml  es-indexer.py  hello-dagster.py  mogni-theevu.json  requirements.txt  sample.env  text-extract-from-pdf.py  text-extraction-from-pdf-for-ebook-digitization.md  workspace.yaml  zybot-es-indexer.py  zybot-text-extract-from-pdf.py
minhash-lsh-fingerprint-pipeline/: .dockerignore  Dockerfile  README.md  generate_docs.py  pyproject.toml  test_task5.py  test_task6.py  test_task7.py  test_task7_e2e.py  workspace.yaml
minhash-lsh-fingerprint-pipeline/data/input/: alcohol_feature_much_t5234.docx  azerbaijani_government_troops_t5207.md  blue_chip_stocks_t7445.docx  bluechip_prices_continued_t5294.docx  bluechip_stocks_closed_t5430.docx  bus_driver_reportedly_t3795.docx  chilly_winds_post_t3177.docx  china_double_investment_t5299.md  china_indicated_tuesday_t3798.docx  croatia_reversed_rejection_t3173.md  diego_maradona_already_t5290.md  fellow_villains_detectives_t5438.md  frenchman_israeli_art_t5204.docx  government_agency_approved_t5433.docx  heavy_snowfall_strong_t8477.docx  high_society_italian_t3171.docx  hindu_militant_party_t6523.md  house_representatives_rejected_t9514.docx  iaea_governors_met_t8470.md  inkatha_freedom_party_t3179.md  iran_friday_opened_t5203.md  ireland_won_rugby_t5435.md  israeli_parliament_defeated_t8662.docx  jacques_medecin_former_t8661.md  (+43 more)
minhash-lsh-fingerprint-pipeline/docs/: document_fingerprinting_brd_adr.md  minhash-lsh-fingerprint-pipeline-data-governance.md  minhash-lsh-fingerprint-pipeline.md
(+76 files in other folders)
