[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docfp"
version = "0.1.0"
description = "Document Fingerprinting Pipeline — Dagster-native MinHash/LSH similarity pipeline"
requires-python = ">=3.12"
dependencies = [
    "dagster>=1.9",
    "dagster-webserver>=1.9",
    "tika>=2.6",
    "python-docx>=1.1",
    "pdfplumber>=0.11",
    "pyarrow>=18",
    "datasketch>=1.6",
    "xxhash>=3.4",
    "structlog>=24",
    "python-dotenv>=1.0",
    "python-magic>=0.4",
]

[project.optional-dependencies]
ocr = [
    "ocrmypdf>=16",
]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
